# whyml

./: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_DEMO_README.md  FIXES_AND_STATUS.md  INSTALLATION.md  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  TEST.md  TODO.md  debug_convert.py  docker-compose.yml  manifest.yaml  package-validation-report.md  pwa-app.html  pyproject.toml  regenerated.html  requirements-dev.txt  requirements.txt  scraped-manifest.yaml  setup.py  site.yaml  spec.txt  start-demo.sh  test-caddy  test-external-content.html  test-html-output.html  test-manifest-simple-external.yaml  test-manifest.yaml  test-output.html  test-php-output.php  test-react-output.jsx  test-selective.yaml  test-simple-output.html  test-vue-output.vue  todo.md
.github/workflows/: production-deployment.yml
data/: simplified.yaml  test-advanced.yaml  test-manifest-external.yaml  test-metadata-structure.yaml
docker/: Dockerfile.dashboard  Dockerfile.html  Dockerfile.nodejs  Dockerfile.php  Dockerfile.production  Dockerfile.react  Dockerfile.screenshot  Dockerfile.typescript  Dockerfile.vue  README.md  dashboard-server.js  dashboard.html  docker-compose.production.yml  nginx.conf  package-nodejs.json  package-react.json  package-screenshot.json  package-typescript.json  package-vue.json  php.conf  react-server.js  screenshot-server.js  server.js  typescript-server.js  vue-server.js
docker/react-public/: index.html
docs/: AUTOMATION_SUCCESS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  USER_TESTING_GUIDE.md  advanced-scraping.md  api-reference.md  api-usage.md  converters.md  examples-guide.md  getting-started.md  installation.md  manifest-reference.md  modular-architecture.md  quick-start.md
docs/cli/: README.md  scrape.md
examples/: advanced-server.sh  basic-usage.sh  pwa-generation.sh
examples/1/: Component.php  Component.tsx  Component.vue  README.md  regenerated.html  scraped-manifest.yaml
examples/advanced-scraping/: README.md
pasvg/: CONTRIBUTING.md  Makefile  debug_metadata.py  debug_xml_error.py  pyproject.toml  sumlines.sh  todo.md
pasvg-builds/: pasvg-build-report.md
pasvg-builds/tutorial-1:-multi-page-html-site-with-menu-using-yaml-dependencies,-php-integration,-and-docker/: README.md
pasvg-builds/tutorial-2:-svg-file-generation-with-menu,-metadata,-and-media-as-datauri-with-php-and-docker/: README.md  build.sh
pasvg-builds/tutorial-3:-tauri-desktop-application-from-scraped-webpage/: README.md  build.sh
pasvg-builds/tutorial-5:-android/windows/linux-application-creation-using-apk.yaml-manifest/: README.md  build.sh
pasvg/examples/: tutorial.md
pasvg/src/pasvg/core/: extractor.py  generator.py  models.py  (+1 more)
pasvg/tests/: test_utils_file_utils.py
project/: index.html  url.list.txt
project/bielik_ai/: manifest.yaml
project/bielik_ai/html/: index.html
project/bielik_ai/js/: index.js
project/bielik_ai/php/: index.php
project/bielik_ai/react/: index.tsx
project/bielik_ai/source/: index.html
project/bielik_ai/ts/: index.ts
project/bielik_ai/vue/: index.vue
project/example_com/: README.md  manifest.yaml
project/example_com/html/: index.html
project/example_com/js/: index.js
project/example_com/php/: index.php  web_index.php
project/example_com/react/: index.tsx
project/example_com/ts/: index.ts
project/example_com/vue/: index.vue
project/tom_sapletta_pl/: manifest.yaml
project/tom_sapletta_pl/html/: index.html
project/tom_sapletta_pl/js/: index.js
project/tom_sapletta_pl/php/: index.php
project/tom_sapletta_pl/react/: index.tsx
project/tom_sapletta_pl/source/: index.html
project/tom_sapletta_pl/ts/: index.ts
project/tom_sapletta_pl/vue/: index.vue
scripts/: batch_process.py  debug_list_split_error.py  debug_real_manifests.py  identify_css_list_rules.py  install.sh  pasvg_extractor.py  pasvg_generator.py  performance-benchmark.py  publish.sh  run-all-examples.sh  screenshot_capture.py  simple_manifest_generator.py  test.sh  test_css_fix.py  test_existing_manifest_fix.py  validate-examples.sh  validate-packages.py  validate-production.sh  version_bumper.py
scripts/examples/: run-example-1.py  run-example-1.sh
test-apk/: capacitor.config.json  package.json
test-apk/www/: index.html  manifest.json  offline.html  sw.js
test-docker/: .dockerignore  Dockerfile  docker-compose.yml
test-extraction-fixed/extracted-project/: README.md  build.sh  docker-compose.yml  pasvg-build.json
test-extraction-fixed/extracted-project/manifests/: site.yaml
test-extraction/tutorial-1:-multi-page-html-site-with-menu-using-yaml-dependencies,-php-integration,-and-docker/: build.sh
test-pwa/: index.html
test-pwa-fixed/: index.html  manifest.json  sw.js
test-spa/: index.html  router.js
test-tauri/src-tauri/: Cargo.toml  tauri.conf.json
tests/: __init__.py  test_cli_integration.py  test_converters.py  test_manifest_loader.py  test_scrapers.py
whyml/: __init__.py  cli.py  cli_wrapper.py  exceptions.py  generators.py  manifest_loader.py  manifest_processor.py  processor.py  server.py
whyml-cli/: LICENSE  Makefile  README.md  pyproject.toml
whyml-cli/whyml_cli/: cli.py
whyml-cli/whyml_cli/commands/: scrape_command.py
whyml-converters/: Makefile  README.md  pyproject.toml
whyml-converters/tests/: test_html_converter.py  test_php_converter.py  test_react_converter.py  test_vue_converter.py
whyml-converters/whyml_converters/: base_converter.py  conversion_result.py  html_converter.py  php_converter.py  react_converter.py  vue_converter.py
whyml-core/: Makefile  README.md  pyproject.toml
whyml-core/whyml_core/exceptions/: __init__.py  processing_exceptions.py
whyml-core/whyml_core/processing/: manifest_processor.py
whyml-core/whyml_core/validation/: manifest_validator.py
whyml-scrapers/: Makefile  README.md  pyproject.toml
whyml-scrapers/whyml_scrapers/: url_scraper.py  webpage_analyzer.py
whyml/converters/: __init__.py  base_converter.py  html_converter.py  php_converter.py  react_converter.py  vue_converter.py
whyml/scrapers/: __init__.py  url_scraper.py  webpage_analyzer.py
(+12 files in other folders)
